--- a/terminal/src/App.css
+++ b/terminal/src/App.css
@@ -13,9 +13,10 @@ input {
   padding: 0;
   background-color: transparent;
   color: white;
+  width: 100%;
 }
 
 .terminal {
-  word-break: break-all;
-  
+  white-space: pre-line;
+
 }
